--- a/CharRNN.ipynb
+++ b/CharRNN.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,20 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Chapter 1\\n\\n\\nHappy families are all alike; every unhappy family is unhappy in its own\\nway.\\n\\nEverythin'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('data/anna.txt', 'r') as f:\n",
     "    text = f.read()\n",
@@ -58,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,29 +58,474 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([76,  8, 17, 53, 11, 33, 71, 81, 67, 62, 62, 62, 42, 17, 53, 53, 74,\n",
-       "       81, 38, 17, 77, 25, 19, 25, 33, 65, 81, 17, 71, 33, 81, 17, 19, 19,\n",
-       "       81, 17, 19, 25, 31, 33,  3, 81, 33, 26, 33, 71, 74, 81, 79, 27,  8,\n",
-       "       17, 53, 53, 74, 81, 38, 17, 77, 25, 19, 74, 81, 25, 65, 81, 79, 27,\n",
-       "        8, 17, 53, 53, 74, 81, 25, 27, 81, 25, 11, 65, 81, 54, 57, 27, 62,\n",
-       "       57, 17, 74, 29, 62, 62, 69, 26, 33, 71, 74, 11,  8, 25, 27])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Encode the text\n",
     "encoded = np.array([char2int[c] for c in text])\n",
     "encoded[:100]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing data\n",
+    "1. One hot encode the input text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_hot_encode(arr, n_labels):\n",
+    "    one_hot = np.zeros((np.multiply(*arr.shape), n_labels), dtype=np.float32)\n",
+    "    one_hot[np.arange(one_hot.shape[0]), arr.flatten()] = 1.\n",
+    "    one_hot = one_hot.reshape((*arr.shape, n_labels))\n",
+    "    \n",
+    "    return one_hot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_seq = np.array([[3, 5, 1]])\n",
+    "one_hot = one_hot_encode(test_seq, 8)\n",
+    "\n",
+    "print(one_hot)\n",
+    "one_hot.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# check that the function works as expected\n",
+    "test_seq = np.array([[3, 5, 1]])\n",
+    "one_hot = one_hot_encode(test_seq, 8)\n",
+    "\n",
+    "print(one_hot)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Making training mini-batches\n",
+    "To train on this data, we also want to create mini-batches for training. Remember that we want our batches to be multiple sequences of some desired number of sequence steps. \n",
+    "\n",
+    "In this example, we'll take the encoded characters (passed in as the arr parameter) and split them into multiple sequences, given by batch_size. Each of our sequences will be seq_length long.\n",
+    "\n",
+    "Creating Batches\n",
+    "1. The first thing we need to do is discard some of the text so we only have completely full mini-batches.\n",
+    "\n",
+    "Each batch contains $N \\times M$ characters, where $N$ is the batch size (the number of sequences in a batch) and $M$ is the seq_length or number of time steps in a sequence. Then, to get the total number of batches, $K$, that we can make from the array arr, you divide the length of arr by the number of characters per batch. Once you know the number of batches, you can get the total number of characters to keep from arr, $N * M * K$.\n",
+    "\n",
+    "2. After that, we need to split arr into $N$ batches.\n",
+    "\n",
+    "You can do this using arr.reshape(size) where size is a tuple containing the dimensions sizes of the reshaped array. We know we want $N$ sequences in a batch, so let's make that the size of the first dimension. For the second dimension, you can use -1 as a placeholder in the size, it'll fill up the array with the appropriate data for you. After this, you should have an array that is $N \\times (M * K)$.\n",
+    "\n",
+    "3. Now that we have this array, we can iterate through it to get our mini-batches.\n",
+    "\n",
+    "The idea is each batch is a $N \\times M$ window on the $N \\times (M * K)$ array. For each subsequent batch, the window moves over by seq_length. We also want to create both the input and target arrays. Remember that the targets are just the inputs shifted over by one character. The way I like to do this window is use range to take steps of size n_steps from $0$ to arr.shape[1], the total number of tokens in each sequence. That way, the integers you get from range always point to the start of a batch, and each window is seq_length wide."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_batches(arr, batch_size, seq_length):\n",
+    "    '''Create a generator that returns batches of size\n",
+    "       batch_size x seq_length from arr.\n",
+    "       \n",
+    "       Arguments\n",
+    "       ---------\n",
+    "       arr: Array you want to make batches from\n",
+    "       batch_size: Batch size, the number of sequences per batch\n",
+    "       seq_length: Number of encoded chars in a sequence\n",
+    "    '''\n",
+    "    n_batches = arr.size // (batch_size * seq_length)\n",
+    "    arr = arr[:n_batches * batch_size * seq_length]\n",
+    "    arr = arr.reshape(batch_size, -1)\n",
+    "    for n in range(0, arr.shape[1], seq_length):\n",
+    "        x = arr[:, n:n+seq_length]\n",
+    "        y = np.zeros_like(x)\n",
+    "        try:\n",
+    "            y[:, :-1], y[:, -1] = x[:, 1:], arr[:, n+seq_length]\n",
+    "        except IndexError:\n",
+    "            y[:, :-1], y[:, -1] = x[:, 1:], arr[:, 0]\n",
+    "        yield x, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batches = get_batches(encoded, 8, 50)\n",
+    "x, y = next(batches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# printing out the first 10 items in a sequence\n",
+    "print('x\\n', x[:10, :10])\n",
+    "print('\\ny\\n', y[:10, :10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if GPU is available\n",
+    "train_on_gpu = torch.cuda.is_available()\n",
+    "if(train_on_gpu):\n",
+    "    print('Training on GPU!')\n",
+    "else: \n",
+    "    print('No GPU available, training on CPU; consider making n_epochs very small.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CharRNN(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, tokens, n_hidden=256, n_layers=2,\n",
+    "                               drop_prob=0.5, lr=0.001):\n",
+    "        super().__init__()\n",
+    "        self.drop_prob = drop_prob\n",
+    "        self.n_layers = n_layers\n",
+    "        self.n_hidden = n_hidden\n",
+    "        self.lr = lr\n",
+    "        \n",
+    "        self.chars = tokens\n",
+    "        self.int2char = dict(enumerate(self.chars))\n",
+    "        self.char2int = {ch: ii for ii, ch in self.int2char.items()}\n",
+    "        \n",
+    "        self.lstm = nn.LSTM(input_size = len(self.chars), \n",
+    "                            hidden_size = n_hidden, \n",
+    "                            num_layers = n_layers, \n",
+    "                            dropout = drop_prob,\n",
+    "                            batch_first = True)\n",
+    "        self.dropout = nn.Dropout(drop_prob)\n",
+    "        self.fc = nn.Linear(n_hidden, len(self.chars))\n",
+    "    \n",
+    "    def forward(self, x, hidden):\n",
+    "        ''' Forward pass through the network. \n",
+    "            These inputs are x, and the hidden/cell state `hidden`. '''\n",
+    "        r_output, hidden = self.lstm(x, hidden)\n",
+    "        out_drop = self.dropout(r_output)\n",
+    "        out_drop = out_drop.contiguous().view(-1, self.n_hidden)\n",
+    "        out = self.fc(out_drop)\n",
+    "        return out, hidden\n",
+    "    \n",
+    "    \n",
+    "    def init_hidden(self, batch_size):\n",
+    "        ''' Initializes hidden state '''\n",
+    "        weight = next(self.parameters()).data        \n",
+    "        if (train_on_gpu):\n",
+    "            hidden = (weight.new(self.n_layers, batch_size, self.n_hidden).zero_().cuda(),\n",
+    "                  weight.new(self.n_layers, batch_size, self.n_hidden).zero_().cuda())\n",
+    "        else:\n",
+    "            hidden = (weight.new(self.n_layers, batch_size, self.n_hidden).zero_(),\n",
+    "                      weight.new(self.n_layers, batch_size, self.n_hidden).zero_())\n",
+    "        \n",
+    "        return hidden"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(net, data, epochs=10, batch_size=10, seq_length=50, lr=0.001, clip=5, val_frac=0.1, print_every=10):\n",
+    "    ''' Training a network \n",
+    "    \n",
+    "        Arguments\n",
+    "        ---------\n",
+    "        \n",
+    "        net: CharRNN network\n",
+    "        data: text data to train the network\n",
+    "        epochs: Number of epochs to train\n",
+    "        batch_size: Number of mini-sequences per mini-batch, aka batch size\n",
+    "        seq_length: Number of character steps per mini-batch\n",
+    "        lr: learning rate\n",
+    "        clip: gradient clipping\n",
+    "        val_frac: Fraction of data to hold out for validation\n",
+    "        print_every: Number of steps for printing training and validation loss\n",
+    "    \n",
+    "    '''\n",
+    "    net.train()\n",
+    "    \n",
+    "    opt = torch.optim.Adam(net.parameters(), lr=lr)\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    \n",
+    "    # create training and validation data\n",
+    "    val_idx = int(len(data)*(1-val_frac))\n",
+    "    data, val_data = data[:val_idx], data[val_idx:]\n",
+    "    \n",
+    "    if(train_on_gpu):\n",
+    "        net.cuda()\n",
+    "    \n",
+    "    counter = 0\n",
+    "    n_chars = len(net.chars)\n",
+    "    for e in range(epochs):\n",
+    "        # initialize hidden state\n",
+    "        h = net.init_hidden(batch_size)\n",
+    "        \n",
+    "        for x, y in get_batches(data, batch_size, seq_length):\n",
+    "            counter += 1\n",
+    "            \n",
+    "            # One-hot encode our data and make them Torch tensors\n",
+    "            x = one_hot_encode(x, n_chars)\n",
+    "            inputs, targets = torch.from_numpy(x), torch.from_numpy(y)\n",
+    "            \n",
+    "            if(train_on_gpu):\n",
+    "                inputs, targets = inputs.cuda(), targets.cuda()\n",
+    "\n",
+    "            # Creating new variables for the hidden state, otherwise\n",
+    "            # we'd backprop through the entire training history\n",
+    "            h = tuple([each.data for each in h])\n",
+    "\n",
+    "            # zero accumulated gradients\n",
+    "            net.zero_grad()\n",
+    "            \n",
+    "            # get the output from the model\n",
+    "            output, h = net(inputs, h)\n",
+    "            \n",
+    "            # calculate the loss and perform backprop\n",
+    "            loss = criterion(output, targets.view(batch_size*seq_length))\n",
+    "            loss.backward()\n",
+    "            # `clip_grad_norm` helps prevent the exploding gradient problem in RNNs / LSTMs.\n",
+    "            nn.utils.clip_grad_norm_(net.parameters(), clip)\n",
+    "            opt.step()\n",
+    "            \n",
+    "            # loss stats\n",
+    "            if counter % print_every == 0:\n",
+    "                # Get validation loss\n",
+    "                val_h = net.init_hidden(batch_size)\n",
+    "                val_losses = []\n",
+    "                net.eval()\n",
+    "                for x, y in get_batches(val_data, batch_size, seq_length):\n",
+    "                    # One-hot encode our data and make them Torch tensors\n",
+    "                    x = one_hot_encode(x, n_chars)\n",
+    "                    x, y = torch.from_numpy(x), torch.from_numpy(y)\n",
+    "                    \n",
+    "                    # Creating new variables for the hidden state, otherwise\n",
+    "                    # we'd backprop through the entire training history\n",
+    "                    val_h = tuple([each.data for each in val_h])\n",
+    "                    \n",
+    "                    inputs, targets = x, y\n",
+    "                    if(train_on_gpu):\n",
+    "                        inputs, targets = inputs.cuda(), targets.cuda()\n",
+    "\n",
+    "                    output, val_h = net(inputs, val_h)\n",
+    "                    val_loss = criterion(output, targets.view(batch_size*seq_length))\n",
+    "                \n",
+    "                    val_losses.append(val_loss.item())\n",
+    "                \n",
+    "                net.train() # reset to train mode after iterationg through validation data\n",
+    "                \n",
+    "                print(\"Epoch: {}/{}...\".format(e+1, epochs),\n",
+    "                      \"Step: {}...\".format(counter),\n",
+    "                      \"Loss: {:.4f}...\".format(loss.item()),\n",
+    "                      \"Val Loss: {:.4f}\".format(np.mean(val_losses)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Instantiating model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_hidden= 128\n",
+    "n_layers= 2\n",
+    "\n",
+    "net = CharRNN(chars, n_hidden, n_layers)\n",
+    "print(net)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 50\n",
+    "seq_length = 150\n",
+    "n_epochs =  10 # start small if you are just testing initial behavior\n",
+    "\n",
+    "# train the model\n",
+    "train(net, encoded, epochs=n_epochs, batch_size=batch_size, seq_length=seq_length, lr=0.001, print_every=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change the name, for saving multiple files\n",
+    "model_name = 'rnn_x_epoch.net'\n",
+    "\n",
+    "checkpoint = {'n_hidden': net.n_hidden,\n",
+    "              'n_layers': net.n_layers,\n",
+    "              'state_dict': net.state_dict(),\n",
+    "              'tokens': net.chars}\n",
+    "\n",
+    "with open(model_name, 'wb') as f:\n",
+    "    torch.save(checkpoint, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(net, char, h=None, top_k=None):\n",
+    "        ''' Given a character, predict the next character.\n",
+    "            Returns the predicted character and the hidden state.\n",
+    "        '''\n",
+    "        \n",
+    "        # tensor inputs\n",
+    "        x = np.array([[net.char2int[char]]])\n",
+    "        x = one_hot_encode(x, len(net.chars))\n",
+    "        inputs = torch.from_numpy(x)\n",
+    "        \n",
+    "        if(train_on_gpu):\n",
+    "            inputs = inputs.cuda()\n",
+    "        \n",
+    "        # detach hidden state from history\n",
+    "        h = tuple([each.data for each in h])\n",
+    "        # get the output of the model\n",
+    "        out, h = net(inputs, h)\n",
+    "\n",
+    "        # get the character probabilities\n",
+    "        p = F.softmax(out, dim=1).data\n",
+    "        if(train_on_gpu):\n",
+    "            p = p.cpu() # move to cpu\n",
+    "        \n",
+    "        # get top characters\n",
+    "        if top_k is None:\n",
+    "            top_ch = np.arange(len(net.chars))\n",
+    "        else:\n",
+    "            p, top_ch = p.topk(top_k)\n",
+    "            top_ch = top_ch.numpy().squeeze()\n",
+    "        \n",
+    "        # select the likely next character with some element of randomness\n",
+    "        p = p.numpy().squeeze()\n",
+    "        char = np.random.choice(top_ch, p=p/p.sum())\n",
+    "        \n",
+    "        # return the encoded value of the predicted char and the hidden state\n",
+    "        return net.int2char[char], h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sample(net, size, prime='The', top_k=None):\n",
+    "        \n",
+    "    if(train_on_gpu):\n",
+    "        net.cuda()\n",
+    "    else:\n",
+    "        net.cpu()\n",
+    "    \n",
+    "    net.eval() # eval mode\n",
+    "    \n",
+    "    # First off, run through the prime characters\n",
+    "    chars = [ch for ch in prime]\n",
+    "    h = net.init_hidden(1)\n",
+    "    for ch in prime:\n",
+    "        char, h = predict(net, ch, h, top_k=top_k)\n",
+    "\n",
+    "    chars.append(char)\n",
+    "    \n",
+    "    # Now pass in the previous character and get a new one\n",
+    "    for ii in range(size):\n",
+    "        char, h = predict(net, chars[-1], h, top_k=top_k)\n",
+    "        chars.append(char)\n",
+    "\n",
+    "    return ''.join(chars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(sample(net, 1000, prime='Hello', top_k=5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading a checkpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here we have loaded in a model that trained over 20 epochs `rnn_20_epoch.net`\n",
+    "with open('rnn_x_epoch.net', 'rb') as f:\n",
+    "    checkpoint = torch.load(f)\n",
+    "    \n",
+    "loaded = CharRNN(checkpoint['tokens'], n_hidden=checkpoint['n_hidden'], n_layers=checkpoint['n_layers'])\n",
+    "loaded.load_state_dict(checkpoint['state_dict'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sample using a loaded model\n",
+    "print(sample(loaded, 2000, top_k=5, prime=\"And Levin said\"))"
    ]
   },
   {
@@ -118,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
